# AURUS_test_task

./: .gitignore  CMakeLists.txt  README.md  dockerfile  naive.cpp
docs/: example.flt  task.md
src/core/: file_reader.cpp  file_reader.h
src/core/nodes/: inode.h  node_factory.h  node_types.h
src/core/nodes/face_node/: face_node.h
src/core/nodes/group_node/: group_node.h
src/core/nodes/header_node/: header_node.h
src/core/nodes/long_id_node/: long_id_node.h
src/core/nodes/object_node/: object_node.h
src/errors/: file_io_errors.h
src/types/: type_defenitions.h
tests/: main.cpp
